Updated movement and Created base animation blueprint

--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -88,3 +88,10 @@ DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.Defaul
 +ConsoleKeys=Tilde
 +ConsoleKeys=Caret
 
+[/Script/InputEditor.EnhancedInputEditorProjectSettings]
+DefaultEditorInputClass=/Script/EnhancedInput.EnhancedPlayerInput
++DefaultMappingContexts=(InputMappingContext="/Game/Input/IMC_Character.IMC_Character",Priority=0)
+
+[EnhancedInputPlatformSettings_Windows EnhancedInputPlatformSettings]
+bShouldLogMappingContextRedirects=False
+
