Created client role check widget

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,8 +1,9 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Maps/Start.Start
-EditorStartupMap=/Game/Maps/Start.Start
+GameDefaultMap=/Game/Maps/Base.Base
+EditorStartupMap=/Game/Maps/Base.Base
+TransitionMap=/Game/Maps/TransitionMap.TransitionMap
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
