Added ShooterWeapon component and ShooterWeaponBase class

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,8 +1,8 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Maps/Base.Base
-EditorStartupMap=/Game/Maps/Base.Base
+GameDefaultMap=/Game/Maps/Game.Game
+EditorStartupMap=/Game/Maps/Game.Game
 TransitionMap=/Game/Maps/TransitionMap.TransitionMap
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
